fix overflow

--- a/Web/src/main/resources/static/app/recent/recent.scss
+++ b/Web/src/main/resources/static/app/recent/recent.scss
@@ -6,9 +6,9 @@ $container-height: 413px;
 .recent {
   background: $background-color;
   height: $container-height;
-  z-index: 100;
   padding-left: $container-padding;
   padding-right: $container-padding;
+  overflow: hidden;
 
   h3 {
     color: #C3C2C0;
